--- a/InstagramProfileCard/index.html
+++ b/InstagramProfileCard/index.html
@@ -13,28 +13,19 @@
 </head>
 
 <body>
-    <div class="container d-flex justify-content-center mt-2">
+    <div class="container d-flex justify-content-center mt-5">
 
         <div class="profile-card">
-            <div class="header">
-                <div class="logo"><i class="fa-solid fa-camera"></i></div>
-                <div class="logo2"><i class="fa-brands fa-telegram"></i>
-                </div>
-            </div>
-
             <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
             <div class="username">Renu Yadav</div>
-            <div class="bio">🌍 Adventure Seeker | 📸 Capturing Moments<br>
-                💼 Founder @MyStartup<br>
-                ✈️ Traveling the world, one photo at a time.<br>
-            </div>
+            <div class="bio">Web Developer</div>
             <div class="stats">
                 <div class="stat">
-                    <p>150</p>
+                    <p>342</p>
                     <h6>Posts</h6>
                 </div>
                 <div class="stat">
-                    <p>10k</p>
+                    <p>120k</p>
                     <h6>Followers</h6>
                 </div>
                 <div class="stat">
@@ -42,12 +33,10 @@
                     <h6>Following</h6>
                 </div>
             </div>
-            <div class="footer">
-                <button class="btn1 btn-primary">Follow</button>
-                <button class="btn2 btn-primary">Message</button>
-                <button class="btn3"><i class="fa-solid fa-user-plus"></i></button>
-            </div>
-
+            <div class="buttons">
+                <button class="btn1">Follow</button>
+                <button class="btn2">Message</button>
+            </div>          
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
